matr.cppresult.txt
In file included from cur.cpp:16:0:
piterimova/matr.cpp:35:13: error: 'matr' does not name a type
  matr(const matr& A)
             ^
piterimova/matr.cpp:35:19: error: ISO C++ forbids declaration of 'A' with no type [-fpermissive]
  matr(const matr& A)
                   ^
piterimova/matr.cpp:35:20: error: ISO C++ forbids declaration of 'matr' with no type [-fpermissive]
  matr(const matr& A)
                    ^
piterimova/matr.cpp: In member function 'int Matrix::matr(const int&)':
piterimova/matr.cpp:37:12: error: request for member 'm' in 'A', which is of non-class type 'const int'
      m = A.m;
            ^
piterimova/matr.cpp:38:12: error: request for member 'n' in 'A', which is of non-class type 'const int'
      n = A.n;
            ^
piterimova/matr.cpp:41:22: error: request for member 'data' in 'A', which is of non-class type 'const int'
          data[i] = A.data[i];
                      ^
piterimova/matr.cpp: In member function 'virtual Matrix Matrix::reverse()':
piterimova/matr.cpp:200:14: error: expected ';' before 'A'
         matr A (0,0);
              ^
piterimova/matr.cpp:200:21: error: statement cannot resolve address of overloaded function
         matr A (0,0);
                     ^
piterimova/matr.cpp:201:16: error: 'A' was not declared in this scope
         return A;
                ^
piterimova/matr.cpp:207:18: error: expected ';' before 'A'
             matr A;
                  ^
piterimova/matr.cpp:207:19: error: statement cannot resolve address of overloaded function
             matr A;
                   ^
piterimova/matr.cpp:208:20: error: 'A' was not declared in this scope
             return A;
                    ^
cur.cpp: In member function 'virtual void MatrixTest_Reverse_Test::TestBody()':
cur.cpp:47:7: error: no match for 'operator=' (operand types are 'Matrix' and 'Matrix')
     c = m->reverse();
       ^
cur.cpp:47:7: note: candidate is:
In file included from cur.cpp:16:0:
piterimova/matr.cpp:45:10: note: Matrix& Matrix::operator=(Matrix&)
  Matrix& operator=(Matrix& A)
          ^
piterimova/matr.cpp:45:10: note:   no known conversion for argument 1 from 'Matrix' to 'Matrix&'
./check.sh: line 24: ./a.out: No such file or directory
